package edu.uncw.csc331.cardealership.core;

public class Inventory {
}
