package edu.uncw.csc331.cardealership.model;

public class Sale {
}
