package edu.uncw.csc331.cardealership.model;

public abstract class Vehicle {
}
